# uddi_automation_toolkit

./: .gitignore  README.md  batch_provision.py  decommission_block.py  decommission_dns.py  decommission_site.py  drift_detect.py  main.py  provision_block.py  provision_dns.py  provision_site.py  pyproject.toml  query_block.py  query_dns.py  query_site.py  requirements.txt  retag_block.py  site_template_builder.html  uddi.ini.example  uddi_client.py  uddi_utils.py  web_server.py
src/uddi_toolkit/: __init__.py  __main__.py  batch.py  cli.py  client.py  core.py  drift_cli.py  retag.py
src/uddi_toolkit/block/: decommission.py  provision.py  query.py
src/uddi_toolkit/dns/: decommission.py  provision.py  query.py
src/uddi_toolkit/site/: decommission.py  provision.py  query.py
src/uddi_toolkit/web/: server.py  site_template_builder.html
src/uddi_toolkit/web/static/: app.js
static/: app.js  index.html
templates/: site-london.yaml  site-minimal.yaml
templates/_shared/: address-block-standard.yaml  dns-standard.yaml  site-minimal.yaml  site-standard.yaml
templates/amer/lab/: site-amer-lab01.yaml
templates/amer/production/: site-chicago.yaml  site-new-york.yaml
templates/apac/lab/: site-apac-lab01.yaml
templates/apac/production/: site-singapore.yaml  site-sydney.yaml
templates/blocks/: emea-prod-pool.yaml  regional_address_blocks.yaml
templates/dns/: corp.yaml
templates/emea/lab/: site-emea-lab01.yaml
templates/emea/production/: site-frankfurt.yaml  site-london.yaml
