[project]
name = "uddi-automation-toolkit"
version = "1.0.0"
description = "Tag-driven site provisioning, decommissioning, querying, and template authoring for Infoblox Universal DDI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chris Marrison", email = "chris@infoblox.com" }]
license = { text = "BSD-2-Clause" }
dependencies = [
  "requests>=2.28",
  "PyYAML>=6.0",
  "flask>=3.0",
]

[project.scripts]
provision-site      = "provision_site:main"
decommission-site   = "decommission_site:main"
query-site          = "query_site:main"
batch-provision     = "batch_provision:main"
uddi-web            = "web_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
